--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Sample Test
-    url: https://example~/
+    url: https://example.com/
     about: url is not valid, only used as example of config.yml issue with action.
